--- a/site_ViveBio/public/css/editProfile.css
+++ b/site_ViveBio/public/css/editProfile.css
@@ -8,7 +8,7 @@
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.8);
-    position: absolute;
+    position: fixed;
     top: 0;
     display: flex;
     justify-content: center;
