--- a/site_ViveBio/src/views/users/register.ejs
+++ b/site_ViveBio/src/views/users/register.ejs
@@ -136,7 +136,7 @@
                                 <label class="icon_add_image" for="image"><i class="fas fa-plus-circle"></i></label>
                                 <input class="input_image" type="file" name="image" id="image" accept="image/*"
                                     style="display:none;">
-                                <div class="box-image">
+                                <div class="box-image" id="box-image-preview">
                                 </div>
                                 <div class="register_errors-box">
                                     <span class="register_alert" id="errorImage">
