--- a/site_ViveBio/src/views/products/cart.ejs
+++ b/site_ViveBio/src/views/products/cart.ejs
@@ -7,9 +7,7 @@
             <main>
                 <section class="cart_container">
                     <div class="cart_pasos">
-                        <span class="cart_paso">Paso 1</span>
-                        <span class="cart_paso">Paso 2</span>
-                        <span class="cart_paso">Paso 3</span>
+                        <span class="cart_paso">Productos</span>
                     </div>
                     <div class="cart_articles">
 
@@ -33,11 +31,11 @@
                         </div>
                         <div class="cart_sect_playment_sub">
                             <label>Total</label>
-                            <input class="cart_input_payment total" type="text" value="$" disabled>
+                            <input class="cart_input_payment total" type="text" value="$0" disabled>
                         </div>
                         <div class="cart_sect_playment_sub">
                             <label>Total con Descuento</label>
-                            <input class="cart_input_payment total_desc" type="text" value="$" disabled>
+                            <input class="cart_input_payment total_desc" type="text" value="$0" disabled>
                         </div>
                     </div>
                     <div class="cart_buttons">
