--- a/site_ViveBio/public/css/user.css
+++ b/site_ViveBio/public/css/user.css
@@ -87,7 +87,8 @@
     padding: 5px;
 }
 
-.user__options a {
+.user__options a,
+.user__ubication__datos a {
     background-color: #7FA794;
     text-align: center;
     width: 110px;
@@ -234,6 +235,11 @@
 
     .user .user__historial {
         width: 100%;
+    }
 
+    .ubication__datos{
+        margin-top: 10px;
+        display: flex;
+        justify-content: space-around;
     }
 }
