--- a/site_ViveBio/public/css/list.css
+++ b/site_ViveBio/public/css/list.css
@@ -38,7 +38,7 @@
     padding: 12px;
     border-radius: 10px;
     border: 1px solid var(--verdeOscuro);
-    width: fit-content;
+    width: auto;
     background-color: var(--verdeClaro-Opaco);
     text-shadow: none;
     cursor: pointer;
@@ -241,7 +241,7 @@
     }
 
     .add_product_list {
-        width:fit-content;
+        width:max-content;
     }
 
     .list__cates {
