--- a/site_ViveBio/public/css/header.css
+++ b/site_ViveBio/public/css/header.css
@@ -422,7 +422,7 @@ Header mobile
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: var(--verdeAmarillento);
+        background-color: #7FA794;
     }
 
     .header__user p {
@@ -472,18 +472,13 @@ Header mobile
     }
 
     .header_image-profile {
-        width: 45px;
-        height: 45px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
     }
 }
 
 @media(min-width: 768px) {
-    .header_image-profile {
-        width: 45px;
-        height: 45px;
-        border-radius: 50%;
-    }
 
     .header__opciones ul {
         font-size: .9rem;
