--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -677,9 +677,6 @@ segunda parte del main
     margin-left: -4px;
 }
 
-
-
-
 @media(min-width:426px) {
 
     /* START CARROUSEL TABLET*/
@@ -713,15 +710,19 @@ segunda parte del main
 
 
     .slider {
-        margin: 50px 0 50px;
+        margin: 50px auto 50px;
         height: 400px;
+        width: 100%;
+        max-width: 95%;
+        border-radius: 10px;
+        border: 1px solid var(--verdeOscuro);
     }
     .slides p {
         background-color: unset;
         font-size: .9rem;
         top: 35%;
         text-align: start;
-        padding: 10px 10px;
+        padding: 20px;
         letter-spacing: 2px;
         width: 60%;
     }
