--- a/site_ViveBio/src/views/users/login.ejs
+++ b/site_ViveBio/src/views/users/login.ejs
@@ -14,13 +14,9 @@
             <div class="login_general_container">
                 <div class="login_container_video">
                     <section class="login_video">
-                        <video controls autoplay muted class="video_login">
+                        <video controls autoplay muted loop class="video_login">
                             <source type="video/mp4" src="/video/video_login.mp4">
                         </video>
-                        <!-- <iframe width="300" height="200" src="https://www.youtube.com/embed/k5tsZzJsCuU?controls=0"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe> -->
                     </section>   
                 </div>
                 <div class="login_form-container">
