--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -101,7 +101,11 @@
             </div>
             <nav class="header__nav">
                 <div class="header__localizacion">
-                    <a href="">Estas en "lugar"</a>
+                    <% if (locals.userLogin && locals.userLogin.ubication != null) { %>
+                        <a href="">Su ubicacion es : <%= locals.userLogin.ubication.trim() %></a>
+                        <% }else{ %>
+                            <a href="">Estas en "lugar"</a>
+                        <% } %>
                 </div>
                 <div class="header__opciones">
                     <ul>
