--- a/site_ViveBio/src/views/products/edit.ejs
+++ b/site_ViveBio/src/views/products/edit.ejs
@@ -55,7 +55,7 @@
                                         </div>
                                     <div class="add_form-box">
                                         <label for="image">Imagen</label>
-                                        <input class="add_input" type="file" id="image" name="image" accept="image/*"
+                                        <input class="add_input" type="file" id="images" name="images" accept="image/*"
                                             multiple>
                                             <p class="add_error-blur" id="errorImages"></p>
                                             <div id="imagePreview" class="imagePreview" >
