--- a/site_ViveBio/src/views/error.ejs
+++ b/site_ViveBio/src/views/error.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -39,7 +39,7 @@
         </section>
 
     </main>
-</body> 
+</body>  -->
 
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
