--- a/site_ViveBio/src/views/products/add.ejs
+++ b/site_ViveBio/src/views/products/add.ejs
@@ -7,8 +7,7 @@
 			<main>
 				<section class="add_container">
 					<h3>Agregar Producto</h3>
-					<form action="/product/add" class="productAdd" method="POST" enctype="multipart/form-data">
-
+					<form action="/products/add" class="productAdd" method="POST" enctype="multipart/form-data">
 						<article class="camps_container">
 							<div class="sub_container">
 								<div class="add_form-box">
@@ -68,13 +67,16 @@
 										value="<%= locals.old && old.stock ? old.stock : null %>">
 										<p class="add_error-blur" id="errorStock"></p>
 									</div>
-								<div class="add_form-box">
-									<label for="images">Agregar imágenes</label>
-									<input class="add_input" type="file" id="image" name="image">
-										<div id="imagePreview" class="imagePreview" >
-											<h6>Vista previa</h6>
-										</div>
-									</div>
+									<div class="add_form-box">
+                                        <label for="image">Imagen</label>
+                                        <input class="add_input" type="file" id="image" name="image" accept="image/*"
+                                            multiple>
+                                            <p class="add_error-blur" id="errorImages"></p>
+                                            <div id="imagePreview" class="imagePreview" >
+                                                <h6>Vista previa</h6>
+                                            </div>
+                                        </div>
+                                </div>
 							</div>
 							<div>
 								<div class="add_form-box">
