--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -466,12 +466,13 @@ segunda parte del main
     background-color: #7FA794C4;
     margin: 30px 0;
     height: 80px;
+    border-radius: 20px;
+    margin: 0 auto 20px;
+    padding: 10px;
+    width: 95%;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 20px;
-    margin: 40px;
-    padding: 10px;
 }
 
 .home .titulares h1{
@@ -710,10 +711,9 @@ segunda parte del main
 
 
     .slider {
-        margin: 50px auto 50px;
+        margin: 60px auto 60px;
         height: 400px;
-        width: 100%;
-        max-width: 95%;
+        width: 95%;
         border-radius: 10px;
         border: 1px solid var(--verdeOscuro);
     }
@@ -834,8 +834,8 @@ segunda parte del main
 
     
 .home .titulares h1{
-    border-radius: 20px;
-    font-size: 40px;
+    border-radius: 10px;
+    font-size: 2.4rem;
 }
 
 .home .estilo-c .img-container .info-container {
