--- a/site_ViveBio/src/views/partials/head.ejs
+++ b/site_ViveBio/src/views/partials/head.ejs
@@ -11,4 +11,5 @@
     <script src="/javascript/menuMobile.js" defer></script>
     <script src="/javascript/navEmergent.js" defer></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/javascript/header.js" defer></script>
 </head>
