--- a/site_ViveBio/src/views/users/userprofile.ejs
+++ b/site_ViveBio/src/views/users/userprofile.ejs
@@ -25,7 +25,7 @@
                             </div>
                         </div>
                         <div class="user__options" style="flex-wrap: wrap;">
-                            <a style="cursor:pointer;" class="user__ubication" value="<%= user.username %> ">Agregar Ubicacion</a>
+                            <a style="cursor:pointer;" class="user__ubication" value="<%= user.username %> ">Agregar Ubicación</a>
                             <a href="/users/profile/edit/<%= userLogin.id %>">Editar Perfil <i
                                     class="fas fa-edit"></i></a>
                             <a href="/products/cart">Carrito de compras</a>
