--- a/site_ViveBio/src/views/users/login.ejs
+++ b/site_ViveBio/src/views/users/login.ejs
@@ -35,7 +35,7 @@
                         <h1>Login</h1>
                         <div class="login_box-gf">
                             <div class="login_google">
-                                <button type="submit"><i class="fab fa-google-plus" id="btnSingGoogle"></i></button>
+                                <a href="/auth/google"><i class="fab fa-google-plus" id="btnSingGoogle"></i></a>
                             </div>
                             <div class="login_facebook">
                                 <button type="submit"><i class="fab fa-facebook"></i></button>
